<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvConfirmCodePrompt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/please_enter_the_code_sent_to_your_email"
        style="@style/TextOnly"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvConfirmCodePrompt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/code"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvConfirm"
        style="@style/ButtonNormal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="@+id/tilCode"
        app:layout_constraintStart_toStartOf="@+id/tilCode"
        app:layout_constraintTop_toBottomOf="@id/tilCode" />

    <TextView
        android:id="@+id/tvResend"
        style="@style/ButtonTextOnly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend"
        app:layout_constraintEnd_toEndOf="@+id/tvConfirm"
        app:layout_constraintStart_toStartOf="@+id/tvConfirm"
        app:layout_constraintTop_toBottomOf="@id/tvConfirm" />

</androidx.constraintlayout.widget.ConstraintLayout>