<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvConfirmCodePrompt"
        style="@style/TextOnly"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/please_enter_the_code_sent_to_your_email"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvConfirm"
        style="@style/ButtonNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/tvResend"
        style="@style/ButtonTextOnly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/resend"
        app:layout_constraintEnd_toEndOf="@+id/tvConfirm"
        app:layout_constraintStart_toStartOf="@+id/tvConfirm"
        app:layout_constraintTop_toBottomOf="@id/tvConfirmCodePrompt" />

</androidx.constraintlayout.widget.ConstraintLayout>