<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/ivAvatarPreview"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:scaleType="center"
            android:scaleX="2"
            android:scaleY="2"
            android:src="@drawable/ic_add_pic"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilUsername"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvAvatarPrompt"
            style="@style/TextOnly"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:text="@string/choose_your_avatar_optional"
            android:textStyle="normal"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@id/ivAvatarPreview"
            app:layout_constraintTop_toBottomOf="@id/tilUsername"
            tools:visibility="visible" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lavTick"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/tvAvatarPrompt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvAvatarPrompt"
            app:layout_constraintTop_toTopOf="@id/tvAvatarPrompt"
            app:lottie_autoPlay="false"
            app:lottie_loop="false"
            app:lottie_rawRes="@raw/anim_tick"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvSignOut"
            style="@style/ButtonNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/sign_out"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivAvatarPreview" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>