<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAlmostWhite">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bnvMeetingType"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:background="@color/colorPrimary"
                android:calendarViewShown="false"
                android:datePickerMode="calendar"
                app:layout_constraintTop_toBottomOf="@id/tilName"
                tools:layout_editor_absoluteX="10dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/meeting_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvMaxPeople"
                style="@style/TextOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_people"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@id/npMaxPeople"
                app:layout_constraintEnd_toStartOf="@+id/npMaxPeople"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/npMaxPeople" />

            <com.shawnlin.numberpicker.NumberPicker
                android:id="@+id/npMaxPeople"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tvMaxPeople"
                app:layout_constraintTop_toBottomOf="@id/datePicker"
                app:np_dividerColor="@color/colorPrimary"
                app:np_max="100"
                app:np_min="1"
                app:np_selectedTextColor="@color/colorPrimary"
                app:np_textColor="@color/colorPrimary"
                app:np_value="10" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchPrivate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:checked="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tvIsPrivate"
                app:layout_constraintTop_toBottomOf="@id/npMaxPeople"
                app:thumbTint="@color/colorAccent"
                app:trackTint="@color/colorAccentLight" />

            <TextView
                android:id="@+id/tvIsPrivate"
                style="@style/TextOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/this_meeting_is_private"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@id/switchPrivate"
                app:layout_constraintEnd_toStartOf="@+id/switchPrivate"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/npMaxPeople" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bnvMeetingType"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="start"
        app:itemBackground="@color/colorAlmostWhite"
        app:itemIconSize="30dp"
        app:itemIconTint="@drawable/selector_bottom_nav"
        app:itemTextColor="@drawable/selector_bottom_nav"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/menu_meeting_type" />

</androidx.constraintlayout.widget.ConstraintLayout>